--- a/A/B/pom.xml
+++ b/A/B/pom.xml
@@ -8,6 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   
+  <groupId>org.B</groupId>
   <artifactId>B</artifactId>
   <packaging>war</packaging>
 
